# UChat

./: .gitignore  Dockerfile  README.md  build.sh
ChatServer/: CMakeLists.txt  build.sh
ChatServer/src/: CMakeLists.txt  main.cpp
Client/: CMakeLists.txt  build.sh  login.html  regist.html
Client/src/: CMakeLists.txt  main.cpp
Common/: CMakeLists.txt  net_const.h  server_setting.h
Common/net/: CMakeLists.txt
Common/net/impl/: boost_acceptor.h
Common/net/interface/: acceptor.h  connection.h  server.h
GateServer/: CMakeLists.txt  build.sh  run.sh  run_test.sh
GateServer/conf/: gate_server_setting.json  http_setting.json  log_setting.json
GateServer/include/: acceptor.h  gate_server.h  http_connection.h  io_context_pool.h  logic_system.h  macro.h  net_const.h  server_setting.h  verify_grpc_client.h
GateServer/include/boost_component/: acceptor.h  http_connection.h  io_context_pool.h
GateServer/include/common/: net_const.h  server_setting.h
GateServer/include/rpc/: verify_grpc_client.h
GateServer/include/utils/: logger.h  server_setting.h
GateServer/proto/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
GateServer/src/: CMakeLists.txt  acceptor.cpp  gate_server.cpp  http_connection.cpp  io_context_pool.cpp  logic_system.cpp  main.cpp  verify_grpc_client.cpp
GateServer/src/boost_component/: acceptor.cpp  http_connection.cpp  io_context_pool.cpp
GateServer/src/common/: server_setting.cpp
GateServer/src/rpc/: verify_grpc_client.cpp
GateServer/src/utils/: logger.cpp  server_setting.cpp
GateServer/test/: CMakeLists.txt  test_gate_server.cpp  test_get_code.cpp  test_http_connection.cpp  test_verify_code.js
VerifyServer/: CMakeLists.txt  build.sh  config.js  config.json  email.js  message.proto  package-lock.json  package.json  test.js  test_send.js  verify_server.js
VerifyServer/src/: CMakeLists.txt  main.cpp
